# chorizo

./: .env  .gitignore
backend/: Cargo.toml
backend/migrations/: 20201207012613_initial.sql
backend/src/: auth.rs  chore.rs  main.rs  user.rs
frontend/: .eslintcache  package.json
frontend/src/: AddChore.tsx  AddRecurringChore.tsx  App.tsx  Chore.css  Chore.tsx  ErrorPage.tsx  Hello.tsx  Home.css  Home.tsx  Login.css  Login.tsx  api.ts  store.ts  utils.ts
frontend/src/reducers/: auth.ts
frontend/src/slices/: auth.ts  chore.ts  user.ts
migrations/: 20201207012613_initial.sql
src/: main.rs
