[package]
name = "chorizo"
version = "0.1.0"
authors = ["Andrew Halle <ahalle@berkeley.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.7.0", features = ["attributes"] }
dotenv = "0.15.0"
futures = "0.3.8"
sqlx = { version = "0.4.1", features=["runtime-async-std-native-tls", "sqlite"] }
tide = "0.15.0"
serde = "1.0.118"
anyhow = "1.0.36"
time = "0.2.23"
sha2 = "0.9.2"
